fix layout bugs and add labels

--- a/source/scss/_forms.scss
+++ b/source/scss/_forms.scss
@@ -38,13 +38,17 @@ form,
 .fields {
   li {
     display: grid;
-    grid-template-columns: 1fr 1fr auto;
+    grid-template-columns: 1fr 1fr 6em;
     gap: 0.4em;
     padding: 0.2em 0;
     place-content: start;
 
     actions {
       display: inline-flex;
+    }
+
+    label {
+      grid-template-columns: unset;
     }
 
     input,
